--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+		<packaging>war</packaging>
 	  <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-samples</artifactId>
@@ -13,7 +14,6 @@
         <version>1.1.9.RELEASE</version>
     </parent>-->
 	<artifactId>spring-boot-sample-web-jsp</artifactId>
-	<packaging>jar</packaging>
 
 	<name>Spring Boot Web JSP Sample</name>
 	<description>Spring Boot Web JSP Sample</description>
@@ -47,25 +47,33 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-aop</artifactId>
-	<version>1.1.4.RELEASE</version>
-</dependency>
-
-		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-aop</artifactId>
+	<version>1.1.4.RELEASE</version>
+</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		 -->
 		 <dependency>
 	<groupId>jsptags</groupId>
 	<artifactId>pager-taglib</artifactId>
 	<version>2.0</version>
 </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -112,7 +120,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>  
+        </configuration>  
 			</plugin>
+			<plugin>  
+        <groupId>org.apache.maven.plugins</groupId>  
+        <artifactId>maven-compiler-plugin</artifactId>  
+        <configuration>  
+            <source>1.7</source>  
+            <target>1.7</target>  
+        </configuration>  
+    </plugin>  
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
 				<configuration> <useSystemClassLoader>false</useSystemClassLoader> </configuration> 
 				</plugin> -->
@@ -143,4 +161,5 @@
 			</plugin> -->
 		</plugins>
 	</build>
+
 </project>
